<resources>
    <string name="app_name">AutoML</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="column">column</string>
    <string name="da">DA</string>
    <string name="data_analysis">Data Analysis</string>
    <string name="ml">ML</string>


    <!-- Classification ML Models   -->
    <string name="decision_tree_classifier">Decision Tree Classifier</string>
    <string name="random_forest_classifier">Random Forest Classifier</string>
    <string name="k_nearest_neighbors_classifier">K Nearest Neighbors Classifier</string>
    <string name="svc">SVC</string>
    <string name="naive_bayes">Naive Bayes</string>
    <string name="gaussian_nb">Gaussian NB</string>
    <string name="multinomial_nb">Multinomial NB</string>
    <string name="complement_nb">Complement NB</string>
    <string name="bernoulli_nb">Bernoulli NB</string>
    <string name="n_estimators">N Estimators: 10</string>

    <!--    Regression ML Models-->
    <string name="decision_tree_regressor">Decision Tree Regressor</string>
    <string name="random_forest_regressor">Random Forest Regressor</string>
    <string name="linear_regression">Linear Regression</string>
    <string name="svr">SVR</string>
    <string name="elastic_net_cv">Elastic Net CV</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>

    <string name="fill_na">Fill NA</string>
    <string name="fill_na_method">Fill NA Method</string>
    <string name="remove_column">Remove Column</string>
    <string name="normalize_column">Normalize Column</string>
    <string name="encode_column">Encode Column</string>
    <string name="drop_na">Drop NA</string>

    <string name="weights">weights</string>
    <string name="algorithm">algorithm</string>
    <string name="n_estimators_param">n_estimators</string>
    <string name="max_features">max_features</string>
    <string name="criterion">criterion</string>
    <string name="kernel">kernel</string>
    <string name="degree_param">degree</string>
    <string name="degree">Degree:</string>
    <string name="ml_model">ML Model</string>

    <string name="about"><br>This is an application designed to help Data Scientists create ML pipelines without writing a single line of code.\n\n</br>
        <br>You can use this app and all its features for free.\n\n</br>
        <br>Creator: Tomer Reiner\n\n</br>
        <br>Version: 1.0.9\n\n</br>
        <br>Source Code: <a href="https://github.com/TomerReiner/AutoML">AutoML</a></br>
    </string>

    <!--    Tutorial-->
    <string name="app_explanation">In this app you can create your own ML Models and review them based on data you download!</string>
    <string name="tutorial">In this tutorial we will learn how to use the app step by step!</string>
    <string name="create_an_account">Create an Account</string>
    <string name="signup_tutorial">Before we begin, please give the app permission to send SMS.
        If you do not grant the app this permission, you will not be able to sign in to your account.
        After granting this permission, you are ready to go! To use this app, you must first create an account.
        To create an account, click the account icon at the top right of the screen. Then, click Sign Up and create an account.
        NOTE: a username can only contain english letters and digits.</string>
    <string name="signin_tutorial">If you want to sign into your account, click on the home icon at the top right of the screen and then click Sign In. Enter your username and password and click Sign In. If your credentials are correct, you will recieve a SMS with an authentication code to verify that it is actually you that is trying to sign in.</string>
    <string name="load_file">First, paste the link to your CSV file from GitHub raw view and click Download File. If the download succeeds, the screen will become empty.</string>
    <string name="how_to_add_data_analysis">To create a Data Analysis block, click the + button at the right bottom corner of the screen and then click the button with the graph icon.
        Then select the desired Data Analysis action and the desired column. If there are problems with the data, the system will know how to handle them.</string>
    <string name="how_to_add_ml_model">
        After adding all the Data Analysis blocks, add your ML Model.
        To add an ML Model, click the + at the right button corner of the screen and then click the button with the lamp icon.
        In the dialog that will be opened you will be asked to choose a Classification Model or a Regression Model, and the y column.
        After choosing the class of your ML Model, you will be asked to choose the specific type of the ML Model and other configuration parameters(if needed).
        <br>After selection the ML Model click finish, and your data will be processed. While the ML Model is being built, you have two options:\n</br>
        <br>1) Stay in the app and wait for the ML Model to be built. When the process is done, a new screen will be opened where you can test the ML Model.\n</br>
        2) Quit the app and wait for the process to be completed. When the process is done, you will receive a notification.
        When you click the notification, a new screen will be opened. In this screen you can test your ML Model.
        <br>You can view your models in My Models screen. Note that it takes some time to load the models. If your models are not loaded when you enter this screen, try entering it another time.</br>
    </string>
</resources>